# Traffic-Statistics-System

./: CMakeLists.txt  README.md
include/: BgsManager.h  BgsNameEnum.h  CMakeLists.txt  MyBgs.h  StatisticsManager.h  TrackerManager.h  global.h
include/package_analysis/: CMakeLists.txt
include/package_bgs/: CMakeLists.txt
src/: BgsManager.cpp  MyBgs.cpp  StatisticsManager.cpp  TrackerManager.cpp  main.cpp
